# aep-collector

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
migrations/: 20210220194454_inicial.sql  20210418190353_sensors.sql
src/: config.rs  handler.rs  main.rs  middleware.rs  models.rs  service.rs
