[package]
name = "darti-collector"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.12"
serde = "1.0.123"
sqlx = { version = "0.4.2", features = ["runtime-actix-native-tls", "postgres"] }
